--- a/Productos.html
+++ b/Productos.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img src="img/Logo.png" alt="">
+        <img src="./img/Logo.png" alt="">
         <nav class="Menu">
             <ul>
                 <li><a href="index.html">Inicio</a></li>   
@@ -22,48 +22,48 @@
         <h1 class="h1-productos">COMEDEROS</h1>
         <div id="container-productoUno">
             <div class="ProductoUno">
-                <img src="img/ComederoUno.PNG" alt="">
+                <img src="./img/ComederoUno.PNG" alt="">
                 <strong><p>Comedor metalico 12 cm </p></strong>
                 <strong><p>$5.800</p></strong>
             </div>
             <div class="ProductoUno">
-                <img src="img/ComederoDos.PNG" alt="">
+                <img src="./img/ComederoDos.PNG" alt="">
                 <strong><p>Comedero de plastico 16.5 cm</p></strong>
                 <strong><p>$12.500</p></strong>
             </div>
             <div class="ProductoUno">
-                <img src="img/Bebedero.PNG" alt="">
+                <img src="./img/Bebedero.PNG" alt="">
                 <strong><p>Bebedero dispensador plastico</p></strong>
                 <strong><p>$9.900</p></strong>
             </div>
             <div class="ProductoUno">
-                <img src="img/Termo.PNG" alt="">
+                <img src="./img/Termo.PNG" alt="">
                 <strong><p>Termo plastico con plato portatil</p></strong>
                 <strong><p>$21.300</p></strong>
             </div>
             <div class="ProductoUno">
-                <img src="img/ComederoAzulPNG.png" alt="">
+                <img src="./img/ComederoAzulPNG.png" alt="">
                 <strong><p>Comedero de plastico 16.5 cm</p></strong>
                 <strong><p>$12.500</p></strong>
             </div>
             <div class="ProductoUno">
-                <img src="img/ComederoGatoPNG.png" alt="">
+                <img src="./img/ComederoGatoPNG.png" alt="">
                 <strong><p>Comedero de plastico para gato</p></strong>
                 <strong><p>$13.200</p></strong>
             </div>
             <div class="ProductoUno">
-                <img src="img/ComederoRanitas.png" alt="">
+                <img src="./img/ComederoRanitas.png" alt="">
                 <strong><p>Comedero de plastico ranitas</p></strong>
                 <strong><p>$14.000</p></strong>
             </div>
             <div class="ProductoUno">
-                <img src="img/ComederoRosa.png" alt="">
+                <img src="./img/ComederoRosa.png" alt="">
                 <strong><p>Comedero de plastico 16.5 cm</p></strong>
                 <strong><p>$12.500</p></strong>
             </div>
         </div>
         <div class="bodySuscrpcion">
-            <img src="img/correo.png" alt="">
+            <img src="./img/correo.png" alt="">
             <h2>Suscríbete para más novedades</h2>
             <h3>Redes sociales</h3>
         </div>
