--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <img src="img/Logo.png" alt="">
+        <img src="./img/Logo.png" alt="">
         <nav class="Menu">
             <ul>
                 <li><a href="index.html">Inicio</a></li>   
@@ -21,7 +21,7 @@
     </header>
     <main>
         <div class="containerGreen">
-            <img src="img/backgroundGreen.png" alt="">
+            <img src="./img/backgroundGreen.png" alt="">
         </div>
         <div class="Descuentos">   
             <strong><h2 class="title">¡Es un placer tenerte aquí! </h2></strong>
@@ -32,16 +32,16 @@
         <br>
         <div class="container">
             <div>
-                <img src="img/huella.PNG" alt="">
+                <img src="./img/huella.PNG" alt="">
             </div>
             <br>
             <h1>Productos Destacados</h1><br>
         </div>
         <div>
             <div class="mainDestacados">
-                <img src="img/churrasquito.png" alt="">
-                <img src="img/comedero.PNG" alt="">
-                <img src="img/Huesito.png" alt="">
+                <img src="./img/churrasquito.png" alt="">
+                <img src="./img/comedero.PNG" alt="">
+                <img src="./img/Huesito.png" alt="">
             </div>
         <div class="mainDestacadosDos">
             <strong><p>Juguete Churrasquito</p></strong>
@@ -81,7 +81,7 @@
         </div>
     </div>
         <div class="bodySuscrpcion">
-            <img src="img/correo.png" alt="">
+            <img src="./img/correo.png" alt="">
             <h2>Suscríbete para más novedades</h2>
             <h3>Redes sociales</h3>
         </div>
