--- a/Productos.html
+++ b/Productos.html
@@ -63,7 +63,7 @@
             </div>
         </div>
         <div class="bodySuscrpcion">
-            <img src="./img/correo.png" alt="">
+            <img src="img/correo.png" alt="">
             <h2>Suscríbete para más novedades</h2>
             <h3>Redes sociales</h3>
         </div>
