--- a/accesorios.html
+++ b/accesorios.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img src="./img/Logo.png" alt="">
+        <img src="./Img/Logo.png" alt="">
         <nav class="Menu">
             <ul>
                 <li><a href="index.html">Inicio</a></li>   
@@ -22,48 +22,48 @@
         <h1 class="h1-productos">ACCESORIOS</h1>
         <div id="container-productoUno">
             <div class="ProductoDos">
-                <img src="./img/KitDental.PNG" alt="">
+                <img src="./Img/KitDental.PNG" alt="">
                 <strong><p>Kit dental</p></strong>
                 <strong><p>$12.900</p></strong>
             </div>
             <div class="ProductoDos">
-                <img src="./img/Correa.png" alt="">
+                <img src="./Img/Correa.png" alt="">
                 <strong><p>Correo retráctil</p></strong>
                 <strong><p>$15.900</p></strong>
             </div>
             <div class="ProductoDos">
-                <img src="./img/Pala.PNG" alt="">
+                <img src="./Img/Pala.PNG" alt="">
                 <strong><p>Pala plastica para arena</p></strong>
                 <strong><p>$4.200</p></strong>
             </div>
             <div class="ProductoDos">
-                <img src="./img/Tapete.PNG" alt="">
+                <img src="./Img/Tapete.PNG" alt="">
                 <strong><p>Tapete en tela absorbente</p></strong>
                 <strong><p>$41.900</p></strong>
             </div>
             <div class="ProductoDos">
-                <img src="./img/JugueteUno.PNG" alt="">
+                <img src="./Img/JugueteUno.PNG" alt="">
                 <strong><p>Juguete en goma</p></strong>
                 <strong><p>$9.600</p></strong>
             </div>
             <div class="ProductoDos">
-                <img src="./img/Cepillo.png" alt="">
+                <img src="./Img/Cepillo.png" alt="">
                 <strong><p>Cepillo pequeño tipo carda</p></strong>
                 <strong><p>$7.800</p></strong>
             </div>
             <div class="ProductoDos">
-                <img src="./img/Collar.png" alt="">
+                <img src="./Img/Collar.png" alt="">
                 <strong><p>Collar mediano ajustable</p></strong>
                 <strong><p>$5.100</p></strong>
             </div>
             <div class="ProductoDos">
-                <img src="./img/CollarTres.png" alt="">
+                <img src="./Img/CollarTres.png" alt="">
                 <strong><p>Collar pequeño con cascabel</p></strong>
                 <strong><p>$1.700</p></strong>
             </div>
         </div>
         <div class="bodySuscrpcion">
-            <img src="./img/correo.png" alt="">
+            <img src="./Img/correo.png" alt="">
             <h2>Suscríbete para más novedades</h2>
             <h3>Redes sociales</h3>
         </div>
